2-lesson/app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        resources: #Burstable 
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "150Mi"
            cpu: "200m"
        ports:
        - containerPort: 80

---
apiVersion: v1 
kind: Service
metadata:
  name: app2
spec:
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 80
